# Embedded-Linux

./: README.md  script.sh
Admin-linux-TASKs/task-2/: binary  binary_search.c
Admin-linux-TASKs/task-3/: script.sh
Exam-Ahmed Adel/: config.ini  config_parser.sh
Task1 - Embedded Linux/DynamicLibrary_lab/Include/: mol.h
Task1 - Embedded Linux/DynamicLibrary_lab/Lib/: div.h  main  main.c  mol.c  sub.c  subLib.h
Task1 - Embedded Linux/StaticLibrary_lab/: Calc  main.c
Task1 - Embedded Linux/StaticLibrary_lab/Lib/: Mult.c  add.c  div.c  main.c
cmake_task/: CMakeLists.txt
cmake_task/Include/: addLib.h  mult.h
cmake_task/bulid/: CMakeCache.txt  Makefile  Myproject  cmake_install.cmake
cmake_task/source/: Mult.c  add.c  div.c  mol.c  sub.c
task-4/: script.sh
